html template update #2

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block body %}
-
+<h3>Hello Otus, Hello World, student added</h3>
 <div class="text-center bg-body-tertiary rounded-3">
     <img src="{% static 'images/logo.png' %}" class="bi mt-4 mb-3" width="100" height="100">
     <h1 class="text-body-emphasis">Welcome to LavaCactus!</h1>
